# AI-Agents-Crash-Course-2-Days

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
agents/: Dockerfile  requirements.txt
autogen/basic/: alembic.ini  autogen04202.db
autogen/basic/alembic/versions/: fe64196ea859_initial_schema.py
capstone_projects/langchain/: main.py
crewai/basics/: README.md  pyproject.toml
crewai/basics/output/: report.md
crewai/basics/src/basics/: crew.py  main.py
crewai/examples/marketing_posts_crew/src/marketing_posts_crew/posts/Email Marketing/old email marketing/: email_marketing 2025-03-27 03-11-51.txt  email_marketing 2025-03-29 14-36-33.txt  email_marketing 2025-03-29 14-43-45.txt
crewai/examples/marketing_posts_crew/src/marketing_posts_crew/posts/Email newsletter/old newsletters/: email_newsletter 2025-03-27 03-11-51.txt  email_newsletter 2025-03-29 14-36-33.txt  email_newsletter 2025-03-29 14-43-45.txt
langchain/: chain_basic.ipynb
langraph/: support_agent_graphs.ipynb
n8n/: research_workflow.json
utils/: api.py
