[project]
name = "langchain-prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.177.0",
    "fastapi>=0.116.1",
    "langchain[google-genai]>=0.3.27",
    "langgraph>=0.6.6",
    "openai>=1.105.0",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "uvicorn>=0.35.0",
]
